--- a/androidDownloadTest/AndroidManifest.xml
+++ b/androidDownloadTest/AndroidManifest.xml
@@ -51,7 +51,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Black.NoTitleBar" >
         <activity
             android:name="com.example.androiddownloadtest.MainActivity"
             android:label="@string/app_name" >
